RHTAPBUGS-1305: rework the same way as git-clone task
Signed-off-by: Radim Hopp <rhopp@redhat.com>

--- a/pipelines/docker-build-rhtap/patch.yaml
+++ b/pipelines/docker-build-rhtap/patch.yaml
@@ -106,7 +106,7 @@
   value: $(tasks.build-container.results.IMAGE_URL)
 - op: replace
   path: /spec/finally/1/params/3/value  # show-summary.params.build-task-status
-  value: $(tasks.build-container.results.status)
+  value: $(tasks.build-container.status)
 - op: replace
   path: /spec/results/0/value  # IMAGE_URL
   value: $(tasks.build-container.results.IMAGE_URL)
