feat(STONEINTG-1030): added db version to clamav report
Signed-off-by: Pat O'Connor <paoconno@redhat.com>

--- a/task/clamav-scan/0.1/clamav-scan.yaml
+++ b/task/clamav-scan/0.1/clamav-scan.yaml
@@ -105,7 +105,8 @@ spec:
               --alert-encrypted=yes --alert-encrypted-archive=yes --alert-encrypted-doc=yes --alert-macros=yes \
               --alert-phishing-ssl=yes --alert-phishing-cloak=yes --alert-partition-intersection=yes \
               | tee /work/logs/clamscan-result-$arch.log || true
-            echo "Executed-on: Scan was executed on version - $(clamscan --version)" | tee -a /work/logs/clamscan-result-$arch.log
+            db_version=$(sigtool --info /var/lib/clamav/daily.cvd | grep 'Version')
+            echo "Executed-on: Scan was executed on clamscan version - $(clamscan --version) Database $db_version" | tee -a "/work/logs/clamscan-result-$arch.log"
 
             digests_processed+=("\"$arch_sha\"")
 
