Tagging appstudio-utils with latest
Using a floating tag so applications can use
the latest utilities without updating the image
tag.

https://issues.redhat.com/browse/EC-865

--- a/.tekton/push.yaml
+++ b/.tekton/push.yaml
@@ -64,6 +64,17 @@ spec:
           - name: source
             workspace: workspace
 
+      - name: apply-additional-image-tags
+        params:
+          - name: IMAGE
+            value: $(tasks.build-container.results.IMAGE_REF)
+          - name: ADDITIONAL_TAGS
+            value: ["latest"]
+        runAfter:
+          - build-container
+        taskRef:
+          name: apply-tags
+
       - name: build-bundles
         params:
           - name: revision
