--- a/task/buildah/0.2/buildah.yaml
+++ b/task/buildah/0.2/buildah.yaml
@@ -223,9 +223,18 @@ spec:
       # Setting new namespace to run buildah - 2^32-2
       echo 'root:1:4294967294' | tee -a /etc/subuid >> /etc/subgid
 
+      BUILD_ARG_FLAGS=()
+      for build_arg in "$@"; do
+        BUILD_ARG_FLAGS+=("--build-arg=$build_arg")
+      done
+
+      BASE_IMAGES=$(
+        dockerfile-json "${BUILD_ARG_FLAGS[@]}" "$dockerfile_path" |
+          jq -r '.Stages[] | select(.From | .Stage or .Scratch | not) | .BaseName'
+      )
+
       BUILDAH_ARGS=()
 
-      BASE_IMAGES=$(dockerfile-json "$dockerfile_path" | jq -r '.Stages[] | select(.From | .Stage or .Scratch | not) | .BaseName')
       if [ "${HERMETIC}" == "true" ]; then
         BUILDAH_ARGS+=("--pull=never")
         UNSHARE_ARGS="--net"
@@ -243,9 +252,7 @@ spec:
         BUILDAH_ARGS+=("--build-arg-file=$(pwd)/$SOURCE_CODE_DIR/${BUILD_ARGS_FILE}")
       fi
 
-      for build_arg in "$@"; do
-        BUILDAH_ARGS+=("--build-arg=$build_arg")
-      done
+      BUILDAH_ARGS+=("${BUILD_ARG_FLAGS[@]}")
 
       if [ -n "${ADD_CAPABILITIES}" ]; then
         BUILDAH_ARGS+=("--cap-add=${ADD_CAPABILITIES}")
