Propagate oci-ta Pipelines to e2e-tests
This commit passes new environment variables to the e2e tests containing
references to the oci-ta build Pipelines. This allows us to test those
Pipelines.

Ref: EC-715

Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/.tekton/pull-request.yaml
+++ b/.tekton/pull-request.yaml
@@ -143,6 +143,10 @@ spec:
           results:
           - name: custom-docker-build-bundle
             description: "custom bundle for docker-build pipeline"
+          - name: custom-docker-build-oci-ta-bundle
+            description: "custom bundle for docker-build-oci-ta pipeline"
+          - name: custom-docker-build-multi-platform-oci-ta-bundle
+            description: "custom bundle for docker-build-multi-platform-oci-ta"
           - name: custom-fbc-builder-bundle
             description: "custom bundle for fbc-builder pipeline"
           steps:
@@ -160,8 +164,10 @@ spec:
                 ENABLE_HERMETIC_BUILD=1 \
                 hack/build-and-push.sh
                 eval "source bundle_values.env"
-                echo -n $CUSTOM_DOCKER_BUILD_PIPELINE_BUNDLE | tee $(results.custom-docker-build-bundle.path)
-                echo -n $CUSTOM_FBC_BUILDER_PIPELINE_BUNDLE | tee $(results.custom-fbc-builder-bundle.path)
+                echo -n "$CUSTOM_DOCKER_BUILD_PIPELINE_BUNDLE" | tee "$(results.custom-docker-build-bundle.path)"
+                echo -n "$CUSTOM_DOCKER_BUILD_OCI_TA_PIPELINE_BUNDLE" | tee "$(results.custom-docker-build-oci-ta-bundle.path)"
+                echo -n "$CUSTOM_DOCKER_BUILD_MULTI_PLATFORM_OCI_TA_PIPELINE_BUNDLE" | tee "$(results.custom-docker-build-multi-platform-oci-ta-bundle.path)"
+                echo -n "$CUSTOM_FBC_BUILDER_PIPELINE_BUNDLE" | tee "$(results.custom-fbc-builder-bundle.path)"
           workspaces:
             - name: source
       - name: e2e-tests
@@ -176,6 +182,10 @@ spec:
             value: "{{ revision }}"
           - name: docker-build-bundle
             value: "$(tasks.build-bundles.results.custom-docker-build-bundle)"
+          - name: docker-build-oci-ta-bundle
+            value: "$(tasks.build-bundles.results.custom-docker-build-oci-ta-bundle)"
+          - name: docker-build-multi-platform-oci-ta-bundle
+            value: "$(tasks.build-bundles.results.custom-docker-build-multi-platform-oci-ta-bundle)"
           - name: fbc-builder-bundle
             value: "$(tasks.build-bundles.results.custom-fbc-builder-bundle)"
         runAfter:
