--- a/.tekton/tasks/e2e-test.yaml
+++ b/.tekton/tasks/e2e-test.yaml
@@ -22,6 +22,10 @@ spec:
       type: string
     - name: docker-build-bundle
       type: string
+    - name: docker-build-oci-ta-bundle
+      type: string
+    - name: docker-build-multi-platform-oci-ta-bundle
+      type: string
     - name: fbc-builder-bundle
       type: string
   steps:
@@ -67,5 +71,9 @@ spec:
         value: $(params.ec_pipelines_repo_revision)
       - name: CUSTOM_DOCKER_BUILD_PIPELINE_BUNDLE
         value: "$(params.docker-build-bundle)"
+      - name: CUSTOM_DOCKER_BUILD_OCI_TA_PIPELINE_BUNDLE
+        value: "$(params.docker-build-oci-ta-bundle)"
+      - name: CUSTOM_DOCKER_BUILD_OCI_MULTI_PLATFORM_TA_PIPELINE_BUNDLE
+        value: "$(params.docker-build-multi-platform-oci-ta-bundle)"
       - name: CUSTOM_FBC_BUILDER_PIPELINE_BUNDLE
         value: "$(params.fbc-builder-bundle)"
