CI: don't ignore build-and-push failures
Signed-off-by: Adam Cmiel <acmiel@redhat.com>

--- a/.tekton/pull-request.yaml
+++ b/.tekton/pull-request.yaml
@@ -152,6 +152,8 @@ spec:
               workingDir: $(workspaces.source.path)/source
               script: |
                 #!/usr/bin/env bash
+                set -e
+
                 QUAY_NAMESPACE=konflux-ci \
                 TEST_REPO_NAME=pull-request-builds \
                 BUILD_TAG=$(params.revision) \
