Use `hermetic` param in FBC builder pipeline to configure `build-container` task
Remove hardcoded `hermetic="true"` in `build-container` task for the FBC
pipeline.

Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

--- a/pipelines/fbc-builder/patch.yaml
+++ b/pipelines/fbc-builder/patch.yaml
@@ -30,7 +30,7 @@
   - name: CONTEXT
     value: $(params.path-context)
   - name: HERMETIC
-    value: "true"
+    value: $(params.hermetic)
   - name: IMAGE_EXPIRES_AFTER
     value: "$(params.image-expires-after)"
   - name: COMMIT_SHA
