Set hermetic by default for FBC builder
Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

--- a/pipelines/fbc-builder/patch.yaml
+++ b/pipelines/fbc-builder/patch.yaml
@@ -16,6 +16,9 @@
     "pipelines.openshift.io/runtime": "fbc"
     "pipelines.openshift.io/strategy": "fbc"
 - op: replace
+  path: /spec/params/7/default
+  value: "true"
+- op: replace
   path: /spec/tasks/3/taskRef
   value:
     name: buildah
