--- a/task/sast-snyk-check/0.2/sast-snyk-check.yaml
+++ b/task/sast-snyk-check/0.2/sast-snyk-check.yaml
@@ -122,9 +122,7 @@ spec:
 
         echo "Selecting auth"
         select-oci-auth $IMAGE_URL > $HOME/auth.json
-        echo "Attaching to ${IMAGE_URL} via the OCI 1.1 Referrers API"
-        oras attach --no-tty --registry-config "$HOME/auth.json" --distribution-spec v1.1-referrers-api --artifact-type "${MEDIA_TYPE}" "${IMAGE_URL}" "${UPLOAD_FILE}:${MEDIA_TYPE}"
-        echo "Attaching to ${IMAGE_URL} via the OCI 1.1 Referrers Tag"
-        oras attach --no-tty --registry-config "$HOME/auth.json" --distribution-spec v1.1-referrers-tag --artifact-type "${MEDIA_TYPE}" "${IMAGE_URL}" "${UPLOAD_FILE}:${MEDIA_TYPE}"
+        echo "Attaching to ${IMAGE_URL}"
+        oras attach --no-tty --registry-config "$HOME/auth.json" --artifact-type "${MEDIA_TYPE}" "${IMAGE_URL}" "${UPLOAD_FILE}:${MEDIA_TYPE}"
   workspaces:
   - name: workspace
