buildah: restore exclusion of "FROM oci-archive:"
Commit f12435b933 (Replace grep base images parsing with
dockerfile-json) accidentally reverted fdc3d9c57cc
(buildah: Don't include oci-archive: FROM lines in BASE_IMAGES)

Original commit message:

    In certain cases, we might have a FROM line which is from an archive
    exported by a pevious build stage; when we are pre-pulling images
    for a hermetic build, skip these images.

    (Even if the oci-archive wasn't generated during the build, there's
    no point in pre-pulling a local URL.)

See https://github.com/konflux-ci/build-definitions/pull/1158

Signed-off-by: Owen W. Taylor <otaylor@fishsoup.net>

--- a/task/buildah-remote/0.2/buildah-remote.yaml
+++ b/task/buildah-remote/0.2/buildah-remote.yaml
@@ -327,7 +327,7 @@ spec:
 
       BASE_IMAGES=$(
         dockerfile-json "${BUILD_ARG_FLAGS[@]}" "$dockerfile_path" |
-          jq -r '.Stages[] | select(.From | .Stage or .Scratch | not) | .BaseName'
+          jq -r '.Stages[] | select(.From | .Stage or .Scratch | not) | .BaseName | select(test("^oci-archive:") | not)'
       )
 
       BUILDAH_ARGS=()
