Add the IMAGE_REF parameter to the image index task
In order to have consistency between all image build tasks, we should
also set the IMAGE_REF result when building the image index.

Signed-off-by: arewm <arewm@users.noreply.github.com>

--- a/task/build-image-index/0.1/build-image-index.yaml
+++ b/task/build-image-index/0.1/build-image-index.yaml
@@ -45,6 +45,8 @@ spec:
     name: IMAGE_URL
   - description: List of all referenced image manifests
     name: IMAGES
+  - description: Image reference of the built image containing both the repository and the digest
+    name: IMAGE_REF
   stepTemplate:
     env:
     - name: BUILDAH_FORMAT
@@ -136,6 +138,10 @@ spec:
 
       cat image-digest | tee $(results.IMAGE_DIGEST.path)
       echo -n "$IMAGE" | tee "$(results.IMAGE_URL.path)"
+      {
+        echo -n "${IMAGE}@"
+        cat "image-digest"
+      } > "$(results.IMAGE_REF.path)"
       echo -n "${image_manifests:1:-1}" > "$(results.IMAGES.path)"
     securityContext:
       capabilities:
