feat(CLOUDDST-24366) Update description of show-sbom
SPDX format will be supported by build-definitions later. Update
description of show-sbom tasks so that they are not limited to CycloneDX.

Signed-off-by: Emily Zheng <yuzheng@redhat.com>

--- a/task/show-sbom/0.1/show-sbom.yaml
+++ b/task/show-sbom/0.1/show-sbom.yaml
@@ -10,7 +10,7 @@ metadata:
     tekton.dev/tags: "konflux"
 spec:
   description: >-
-    Shows the Software Bill of Materials (SBOM) generated for the built image in CyloneDX JSON format.
+    Shows the Software Bill of Materials (SBOM) generated for the built image.
   params:
     - name: IMAGE_URL
       description: Fully qualified image name to show SBOM for.
