chore(RHTAPWATCH-1297): Add rpms-signature-scan to template
Add rpms-signature-scan to template

Signed-off-by: Avi Biton <abiton@redhat.com>

--- a/pipelines/template-build/template-build.yaml
+++ b/pipelines/template-build/template-build.yaml
@@ -265,7 +265,21 @@ spec:
       workspaces:
       - name: workspace
         workspace: workspace
-
+    - name: rpms-signature-scan
+      when:
+      - input: $(params.skip-checks)
+        operator: in
+        values: ["false"]
+      runAfter:
+        - build-container
+      taskRef:
+        name: rpms-signature-scan
+        version: "0.1"
+      params:
+      - name: image-url
+        value: $(tasks.build-container.results.IMAGE_URL)
+      - name: image-digest
+        value: $(tasks.build-container.results.IMAGE_DIGEST)
   finally:
     - name: show-sbom
       taskRef:
