mount secrets for rpm-ostree task
Signed-off-by: Robert Cerven <rcerven@redhat.com>

--- a/task/rpm-ostree/0.2/rpm-ostree.yaml
+++ b/task/rpm-ostree/0.2/rpm-ostree.yaml
@@ -165,6 +165,7 @@ spec:
           $network_opt \
           --mount type=bind,source=$BUILD_DIR/tmp,target=/var/tmp,relabel=shared \
           --privileged \
+          --tmpfs /run/secrets \
           -e CONTEXT="$CONTEXT" \
           -e IMAGE_FILE="$IMAGE_FILE" \
           -e CONFIG_FILE="$CONFIG_FILE" \
