rsync .docker directory to host in rpm-ostree task
Signed-off-by: Robert Cerven <rcerven@redhat.com>

--- a/task/rpm-ostree/0.1/rpm-ostree.yaml
+++ b/task/rpm-ostree/0.1/rpm-ostree.yaml
@@ -163,6 +163,7 @@ spec:
 
       chmod +x scripts/script-build.sh
       rsync -ra scripts "$SSH_HOST:$BUILD_DIR"
+      rsync -ra "$HOME/.docker/" "$SSH_HOST:$BUILD_DIR/.docker/"
       ssh $SSH_ARGS "$SSH_HOST" \
         podman run \
           $network_opt \
