--- a/task/buildah-remote-oci-ta/0.2/buildah-remote-oci-ta.yaml
+++ b/task/buildah-remote-oci-ta/0.2/buildah-remote-oci-ta.yaml
@@ -112,13 +112,16 @@ spec:
   - default: fetched.repos.d
     description: Path in source workspace where dynamically-fetched repos are present
     name: YUM_REPOS_D_FETCHED
+    type: string
   - default: repos.d
     description: Path in the git repository in which yum repository files are stored
     name: YUM_REPOS_D_SRC
+    type: string
   - default: /etc/yum.repos.d
     description: Target path on the container in which yum repository files should
       be made available
     name: YUM_REPOS_D_TARGET
+    type: string
   - default: ca-bundle.crt
     description: The name of the key in the ConfigMap that contains the CA bundle
       data.
