--- a/task/deprecated-image-check/0.1/deprecated-image-check.yaml
+++ b/task/deprecated-image-check/0.1/deprecated-image-check.yaml
@@ -16,11 +16,14 @@ spec:
     - name: POLICY_DIR
       description: Path to directory containing Conftest policies.
       default: "/project/repository/"
+      type: string
     - name: POLICY_NAMESPACE
       description: Namespace for Conftest policy.
       default: "required_checks"
+      type: string
     - name: BASE_IMAGES_DIGESTS
       description: Digests of base build images.
+      type: string
 
   results:
     - name: PYXIS_HTTP_CODE
