--- a/task/deprecated-image-check/0.4/deprecated-image-check.yaml
+++ b/task/deprecated-image-check/0.4/deprecated-image-check.yaml
@@ -16,16 +16,21 @@ spec:
     - name: POLICY_DIR
       description: Path to directory containing Conftest policies.
       default: "/project/repository/"
+      type: string
     - name: POLICY_NAMESPACE
       description: Namespace for Conftest policy.
       default: "required_checks"
+      type: string
     - name: BASE_IMAGES_DIGESTS
       description: Digests of base build images.
       default: ""
+      type: string
     - name: IMAGE_URL
       description: Fully qualified image name.
+      type: string
     - name: IMAGE_DIGEST
       description: Image digest.
+      type: string
     - name: CA_TRUST_CONFIG_MAP_NAME
       type: string
       description: The name of the ConfigMap to read CA bundle data from.
