--- a/task/ecosystem-cert-preflight-checks/0.1/ecosystem-cert-preflight-checks.yaml
+++ b/task/ecosystem-cert-preflight-checks/0.1/ecosystem-cert-preflight-checks.yaml
@@ -8,6 +8,7 @@ spec:
   params:
     - name: image-url
       description: Image url to scan.
+      type: string
     - name: ca-trust-config-map-name
       type: string
       description: The name of the ConfigMap to read CA bundle data from.
