--- a/task/generate-odcs-compose/0.1/generate-odcs-compose.yaml
+++ b/task/generate-odcs-compose/0.1/generate-odcs-compose.yaml
@@ -8,9 +8,11 @@ spec:
     - name: COMPOSE_INPUTS
       description: relative path from workdir workspace to the compose inputs file
       default: compose_inputs.yaml
+      type: string
     - name: COMPOSE_OUTPUTS
       description: relative path from workdir workspace to store compose output files
       default: repos
+      type: string
   workspaces:
     - name: workdir
       description: |
