--- a/task/init/0.1/init.yaml
+++ b/task/init/0.1/init.yaml
@@ -13,21 +13,27 @@ spec:
   params:
     - name: image-url
       description: Image URL for build by PipelineRun
+      type: string
     - name: rebuild
       description: Rebuild the image if exists
       default: "false"
+      type: string
     - name: skip-checks
       description: Skip checks against built image
       default: "false"
+      type: string
     - name: skip-optional
       default: "true"
       description: Skip optional checks, set false if you want to run optional checks
+      type: string
     - name: pipelinerun-name
       description: unused, should be removed in next task version
       default: ""
+      type: string
     - name: pipelinerun-uid
       description: unused, should be removed in next task version
       default: ""
+      type: string
   results:
     - name: build
       description: Defines if the image in param image-url should be built
