--- a/task/init/0.2/init.yaml
+++ b/task/init/0.2/init.yaml
@@ -13,12 +13,15 @@ spec:
   params:
     - name: image-url
       description: Image URL for build by PipelineRun
+      type: string
     - name: rebuild
       description: Rebuild the image if exists
       default: "false"
+      type: string
     - name: skip-checks
       description: Skip checks against built image
       default: "false"
+      type: string
   results:
     - name: build
       description: Defines if the image in param image-url should be built
