--- a/task/opm-get-bundle-version/0.1/opm-get-bundle-version.yaml
+++ b/task/opm-get-bundle-version/0.1/opm-get-bundle-version.yaml
@@ -8,6 +8,7 @@ spec:
   params:
     - name: bundle-image
       description: OLM bundle image to query
+      type: string
   results:
     - name: bundle-version
       description: olm.package version
