--- a/task/opm-render-bundles/0.1/opm-render-bundles.yaml
+++ b/task/opm-render-bundles/0.1/opm-render-bundles.yaml
@@ -9,15 +9,20 @@ spec:
     - name: binary-image
       description: Base image in which to use for the catalog image
       default: registry.redhat.io/openshift4/ose-operator-registry:latest
+      type: string
     - name: bundle-images
       description: Comma separated list of bundles to add
+      type: string
     - name: operator-name
       description: Name of the Operator
+      type: string
     - name: operator-version
       description: Version of the Operator
+      type: string
     - name: default-channel
       description: The channel that subscriptions will default to if unspecified
       default: stable
+      type: string
   workspaces:
     - name: source
       description: Workspace with the source code
