--- a/task/buildah-oci-ta/0.2/buildah-oci-ta.yaml
+++ b/task/buildah-oci-ta/0.2/buildah-oci-ta.yaml
@@ -113,14 +113,17 @@ spec:
     - name: YUM_REPOS_D_FETCHED
       description: Path in source workspace where dynamically-fetched repos
         are present
+      type: string
       default: fetched.repos.d
     - name: YUM_REPOS_D_SRC
       description: Path in the git repository in which yum repository files
         are stored
+      type: string
       default: repos.d
     - name: YUM_REPOS_D_TARGET
       description: Target path on the container in which yum repository files
         should be made available
+      type: string
       default: /etc/yum.repos.d
     - name: caTrustConfigMapKey
       description: The name of the key in the ConfigMap that contains the
