--- a/task/buildah/0.1/buildah.yaml
+++ b/task/buildah/0.1/buildah.yaml
@@ -58,12 +58,15 @@ spec:
   - name: YUM_REPOS_D_SRC
     description: Path in the git repository in which yum repository files are stored
     default: repos.d
+    type: string
   - name: YUM_REPOS_D_FETCHED
     description: Path in source workspace where dynamically-fetched repos are present
     default: fetched.repos.d
+    type: string
   - name: YUM_REPOS_D_TARGET
     description: Target path on the container in which yum repository files should be made available
     default: /etc/yum.repos.d
+    type: string
   - name: TARGET_STAGE
     description: Target stage in Dockerfile to build. If not specified, the Dockerfile is processed entirely to (and including) its last stage.
     type: string
