--- a/task/clamav-scan/0.1/clamav-scan.yaml
+++ b/task/clamav-scan/0.1/clamav-scan.yaml
@@ -18,11 +18,14 @@ spec:
   params:
     - name: image-digest
       description: Image digest to scan.
+      type: string
     - name: image-url
       description: Image URL.
+      type: string
     - name: docker-auth
       description: unused
       default: ""
+      type: string
     - name: ca-trust-config-map-name
       type: string
       description: The name of the ConfigMap to read CA bundle data from.
