--- a/task/sast-snyk-check-oci-ta/0.2/sast-snyk-check-oci-ta.yaml
+++ b/task/sast-snyk-check-oci-ta/0.2/sast-snyk-check-oci-ta.yaml
@@ -29,6 +29,7 @@ spec:
       default: ""
     - name: SNYK_SECRET
       description: Name of secret which contains Snyk token.
+      type: string
       default: snyk-secret
     - name: SOURCE_ARTIFACT
       description: The Trusted Artifact URI pointing to the artifact with
