change mount location of rhsm ca cert to fix issues happening with microdnf on ubi8

--- a/task/buildah-remote-oci-ta/0.2/buildah-remote-oci-ta.yaml
+++ b/task/buildah-remote-oci-ta/0.2/buildah-remote-oci-ta.yaml
@@ -496,7 +496,7 @@ spec:
           cp /etc/pki/consumer/*.pem /shared/rhsm/etc/pki/consumer
 
           # and then mount get /etc/rhsm/ca/redhat-uep.pem into /run/secrets/rhsm/ca
-          VOLUME_MOUNTS+=(--volume /etc/rhsm/ca/redhat-uep.pem:/run/secrets/rhsm/ca/redhat-uep.pem)
+          VOLUME_MOUNTS+=(--volume /etc/rhsm/ca/redhat-uep.pem:/etc/rhsm/ca/redhat-uep.pem:Z)
         fi
 
       # was: if [ -d "$ACTIVATION_KEY_PATH" ]; then
