create bundle repos automatically if missing
- A check is currently ran checking that every task bundle has its own
  Quay repository
- If the task bundle does not have its own repository, the check will
  fail and the repository has to be created manually
- Automate the repository creation via a task, but only in the on-push
  pipelinerun (once a PR is approved and merged) for security reasons

--- a/.tekton/push.yaml
+++ b/.tekton/push.yaml
@@ -176,6 +176,29 @@ spec:
           workspaces:
             - name: source
 
+      - name: create-repositories-if-missing
+        runAfter:
+          - build-bundles
+        taskSpec:
+          steps:
+            - name: run-create-bundle-repos
+              image: quay.io/konflux-ci/pull-request-builds:appstudio-utils-{{revision}}
+              workingDir: $(workspaces.source.path)/source
+              script: |
+                #!/usr/bin/env bash
+                .tekton/scripts/create-task-pipeline-bundle-repos.sh
+              env:
+                - name: QUAY_TOKEN
+                  valueFrom:
+                    secretKeyRef:
+                      name: konflux-ci-repo-creator
+                      key: quaytoken
+          workspaces:
+            - name: source
+        workspaces:
+          - name: source
+            workspace: workspace
+
       - name: update-infra-repo
         runAfter:
           - build-bundles
