Adding consoleURL to results of get credentials and updating readme

--- a/stepactions/eaas-get-ephemeral-cluster-credentials/0.1/eaas-get-ephemeral-cluster-credentials.yaml
+++ b/stepactions/eaas-get-ephemeral-cluster-credentials/0.1/eaas-get-ephemeral-cluster-credentials.yaml
@@ -32,6 +32,8 @@ spec:
       description: Relative path to the password file in the mounted volume
     - name: apiServerURL
       description: API server URL of the cluster
+    - name: consoleURL
+      description: Console URL of the cluster
   env:
     - name: CLUSTER_NAME
       value: "$(params.clusterName)"
@@ -76,3 +78,6 @@ spec:
     API_SERVER_URL=$("${OC[@]}" get cti "$CLUSTER_NAME" -o=jsonpath='{.status.apiServerURL}')
     echo "API Server URL: $API_SERVER_URL"
     echo -n "$API_SERVER_URL" > "$(step.results.apiServerURL.path)"
+    CONSOLE_URL=https://$("${OC[@]}" get route console -n openshift-console -o go-template --template="{{.spec.host}}")
+    echo "Console URL: $CONSOLE_URL"
+    echo -n "$CONSOLE_URL" > "$(step.results.consoleURL.path)"
