renovate: group and reduce cadence of gh-actions PRs
It's enought to have such PR opened weekly

Signed-off-by: Martin Basti <mbasti@redhat.com>

--- a/renovate.json
+++ b/renovate.json
@@ -68,6 +68,11 @@
       "groupName": "shared"
     },
     {
+      "groupName": "github-actions",
+      "matchManagers": ["github-actions"],
+      "schedule": ["on monday"]
+    },
+    {
       "matchPackageNames": [
         "quay.io/konflux-ci/clamav-db"
       ],
