renovate: group .github/workflows/* together
We have a custom regex manager for a file in .github/workflows. Group
the updates together with other github actions updates.

Signed-off-by: Adam Cmiel <acmiel@redhat.com>

--- a/renovate.json
+++ b/renovate.json
@@ -139,6 +139,9 @@
       "matchManagers": [
         "github-actions"
       ],
+      "matchFileNames": [
+        ".github/workflows/**"
+      ],
       "schedule": [
         "on monday"
       ]
